# dbus-python

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  Makefile.am  NEWS  autogen.sh  configure.ac  dbus-gmain.c  dbus-python.pc.in  meson.build  meson_options.txt  pyproject.toml  setup.cfg  setup.py
.reuse/: dep5
dbus/: connection.py  proxies.py
dbus_bindings/: conn-internal.h  conn.c  dbus_bindings-internal.h  message-get-args.c  message.c  server.c  unixfd.c
doc/: conf.py  maintainer-update-website.sh  meson.build  redirects.py
subprojects/dbus-gmain/: .gitlab-ci.yml  COPYING  Makefile.am  meson_options.txt
subprojects/dbus-gmain/tests/: meson.build  test-thread-server.c
subprojects/dbus-gmain/tests/use-as-subproject/: .gitignore  use-dbus-gmain.c
test/: compiled.test.in  import-repeatedly.c  meson.build  py.test.in  sh.test.in  test-client.py  test-exception-py3.py  test-server.py  test-signals.py  test-standalone.py
test/installable/: meson.build
tests/: 30574.c  test-thread.h  use-as-subproject.py
tests/use-as-subproject/: README  meson.build
tools/: check-c-style.sh  check-coding-style.mk  check-py-style.sh  check-whitespace.sh  ci-Dockerfile.in  ci-build.sh  ci-install.sh  dist.sh  generate-pkginfo.py
