# Copyright 2022 Collabora Ltd.
# SPDX-License-Identifier: MIT

[options]
python_requires = >=3.7
setup_requires =
    meson-python>=0.8.1
    meson>=0.60.3
    ninja
    patchelf
    setuptools
    wheel
zip_safe = False

[metadata]
name = dbus-python
license = Expat (MIT/X11)
description = Python bindings for libdbus
maintainer = The D-Bus maintainers
maintainer_email = dbus@lists.freedesktop.org
long_description = file: README
keywords =
    dbus
    D-Bus
classifiers =
    Development Status :: 7 - Inactive
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Object Brokering
url = http://www.freedesktop.org/wiki/Software/DBusBindings/#python
download_url = http://dbus.freedesktop.org/releases/dbus-python/

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
test =
    tap.py
